tests/failing/blacksch.tail
let v117:<double>100000 = eachV{[double,double],[100000]}(fn v62:[double]0 => let v66:[double]0 = subd(divd(addd(ln(divd(60.0,65.0)),muld(addd(0.1,divd(powd(0.2,2.0),2.0)),v62)),muld(0.2,powd(v62,0.5))),muld(0.2,powd(v62,0.5))) in
          let v69:[double]0 = absd(v66) in
          let v70:[double]0 = divd(1.0,addd(1.0,muld(0.2316419,v69))) in
          let v74:<double>5 = eachV{[double,double],[5]}(fn v72:[double]0 => powd(v70,v72),eachV{[int,double],[5]}(i2d,iotaV(5))) in
          let v85:[double]1 = reshape{[double],[1,1]}([5],v74) in
          let v90:[double]0 = subd(1.0,muld(divd(1.0,powd(muld(2.0,muld(1.0,pi)),0.5)),muld(expd(negd(divd(muld(v69,v69),2.0))),reduce{[double],[0]}(addd,0.0,zipWith{[double,double,double],[1]}(muld,[0.31938153,-0.356563782,1.781477937,-1.821255978,1.330274429],v85))))) in
          let v92:[double]0 = divd(addd(ln(divd(60.0,65.0)),muld(addd(0.1,divd(powd(0.2,2.0),2.0)),v62)),muld(0.2,powd(v62,0.5))) in
          let v95:[double]0 = absd(v92) in
          let v96:[double]0 = divd(1.0,addd(1.0,muld(0.2316419,v95))) in
          let v100:<double>5 = eachV{[double,double],[5]}(fn v98:[double]0 => powd(v96,v98),eachV{[int,double],[5]}(i2d,iotaV(5))) in
          let v111:[double]1 = reshape{[double],[1,1]}([5],v100) in
          let v116:[double]0 = subd(1.0,muld(divd(1.0,powd(muld(2.0,muld(1.0,pi)),0.5)),muld(expd(negd(divd(muld(v95,v95),2.0))),reduce{[double],[0]}(addd,0.0,zipWith{[double,double,double],[1]}(muld,[0.31938153,-0.356563782,1.781477937,-1.821255978,1.330274429],v111))))) in
          subd(muld(60.0,addd(muld(i2d(absi(mini(0,signd(v92)))),subd(1.0,v116)),muld(i2d(subi(1,absi(mini(0,signd(v92))))),v116))),muld(muld(65.0,expd(negd(muld(0.1,v62)))),addd(muld(i2d(absi(mini(0,signd(v66)))),subd(1.0,v90)),muld(i2d(subi(1,absi(mini(0,signd(v66))))),v90)))),eachV{[double,double],[100000]}(fn v7:[double]0 => divd(v7,1e4),eachV{[int,double],[100000]}(i2d,iotaV(100000)))) in
let v120:[double]0 = prSclD(divd(reduce{[double],[0]}(addd,0.0,v117),1e5)) in
v120
